Started working on the charts themselves.