@@ -68,20 +68,9 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<additionalOptions>--add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot</additionalOptions>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
 				<configuration>
-					<argLine>
-						--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED --add-exports=javafx.controls/com.sun.javafx.charts=xaos.ui.plot
-					</argLine>
 
 					<!-- THE FOLLOWING "excludes" AND "includes" SHOULD BE   -->
 					<!-- USED TO ALLOW EXECUTION OF A SINGLE SPECIFIC TEST.  -->
